added password digest

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,5 @@
+<p><%= link_to "+ Add User", new_user_path%></p>
+
 <% @users.each do |user| %>
 <hgroup>
   <h1><%= link_to user.first_name, user_path(user.id) %></h1>
