--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -22,7 +22,7 @@
   <br>
   <%= f.label 'Password:' %>
   <br>
-  <%= f.password_field :password_digest, required: true, placeholder: 'password'%>
+  <%= f.password_field :password, required: true, placeholder: 'password'%>
   <br>
   <br>
   <%= f.label 'Confirm Password:' %>
