--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,22 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="header-container" style="background-color: yellow;display: flex; justify-content: space-between; align-items: center; padding-right: 2%; padding-left: 2%">
+      <div class="header-title">
+        <h1> Balaboosta </h1>
+      </div>
+
+      <div class="header-nav-container" style="width: 50%;">
+        <ul style="list-style-type: none;margin: 0;padding: 0;">
+          <li style="float: right;"><%=link_to "Tours", tours_path%></li>
+          <li style="float: right;margin-right: 5%;"><%=link_to "Guests", guests_path%></li>
+          <li style="float: right;margin-right: 5%;"><%=link_to "Users", users_path%></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="body-container" style="padding-right: 2%; padding-left: 2%">
+      <%= yield %>
+    </div>
   </body>
 </html>
