--- a/app/views/tours/index.html.erb
+++ b/app/views/tours/index.html.erb
@@ -1,3 +1,5 @@
+<p><%= link_to "+ Add Tour", new_tour_path%></p>
+
 <% @tours.each do |tour| %>
   <%=link_to tour_path(tour.id) do%>
     <section>
