--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,4 @@
-<h1>Hello, <%=@user.formatted_name%></h1>
+<h1><%=@user.formatted_name%></h1>
 
-<h2>Upcoming Tours</h2>
-<ul>
-<% @tours.each do |tour| %>
-  <li><%= link_to tour.formatted_name, tour_path(tour.id) %></li>
-<% end %>
-</ul>
+<%= link_to "Edit Account", edit_user_path(@user) %>
+<%= link_to "Change Password", change_password_path(@user) %>
