--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
           <li style="float: right;"><%=link_to "Logout", logout_path, method: "delete"%></li>
           <li style="float: right;margin-right: 5%;"><%=link_to "Tours", tours_path%></li>
           <li style="float: right;margin-right: 5%;"><%=link_to "Guests", guests_path%></li>
-          <li style="float: right;margin-right: 5%;"><%=link_to "Users", users_path%></li>
+          <% if is_admin? %>
+            <li style="float: right;margin-right: 5%;"><%=link_to "Users", users_path%></li>
+          <% end %>
         </ul>
       </div>
       <%end%>
