--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
           <li style="float: right;margin-right: 5%;"><%=link_to "Tours", tours_path%></li>
           <li style="float: right;margin-right: 5%;"><%=link_to "Guests", guests_path%></li>
           <% if is_admin? %>
+            <li style="float: right;margin-right: 5%;"><%=link_to "Payments", payments_path%></li>
             <li style="float: right;margin-right: 5%;"><%=link_to "Users", users_path%></li>
           <% end %>
         </ul>
