--- a/app/views/tours/edit_reservation.html.erb
+++ b/app/views/tours/edit_reservation.html.erb
@@ -1,6 +1,6 @@
 <h1>Edit <%=@guest.formatted_name%>'s <%=@tour.location.name%> Tour</h1>
 
-<%=form_tag "/guests/#{@guest.id}/edit_tour/#{@guest.id}" do %>
+<%=form_tag "/tours/#{@tour.id}/edit_tour/#{@guest.id}" do %>
   <%= label_tag 'Number of guests:' %>
   <br>
   <%= select_tag :num_guests, options_for_select((1..20), @tour_guest.num_guests) %>
