--- a/app/views/guests/show.html.erb
+++ b/app/views/guests/show.html.erb
@@ -3,7 +3,7 @@
 
 <h2>Upcoming Tours</h2>
 <% @guest.tours.each do |tour| %>
-  <h3><%=tour.location.name + " - " + tour.date + " with " + @guest.num_guests(tour).to_s + " guests." if @guest.num_guests(tour)%></h3>
+  <h3><%=tour.location.name + " - " + tour.formatted_date_short + " with " + @guest.num_guests(tour).to_s + " guests." if @guest.num_guests(tour)%></h3>
   <%= link_to "Delete Reservation", "/guests/#{@guest.id}/remove_tour/#{tour.id}", method: 'delete', data: { confirm: "Really?" } %>
   <%= link_to "Edit Reservation", "/guests/#{@guest.id}/edit_tour/#{tour.id}" %>
 <% end %>
