--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,3 +38,15 @@ html, body{
     width: 6vw;
   }
 }
+
+.tours-container{
+  margin-top: 20px;
+  .tours-list{
+    display: flex;
+    flex-wrap: wrap;
+    .card{
+      margin-right: 20px;
+      margin-top: 20px;
+    }
+  }
+}
